--- a/assets/css/shared_cloud.css
+++ b/assets/css/shared_cloud.css
@@ -561,3 +561,18 @@ header {
         transform: none !important;
     }
 }
+
+.pdf-window {
+    width: 850px;
+    height: 85vh;
+    top: 5%;
+    left: 10%;
+}
+
+/* Força o iframe a ocupar todo o espaço do window-content */
+#pdf-frame {
+    width: 100%;
+    height: 100%;
+    flex: 1;                 /* Garante que ele estique */
+    border: none;
+}
