--- a/assets/css/shared_cloud.css
+++ b/assets/css/shared_cloud.css
@@ -420,8 +420,7 @@ header {
 
 /* === AJUSTES PARA CELULAR E TABLET (Responsividade) === */
 /* === CORREÇÃO MOBILE DEFINITIVA (REVISADA) === */
-@media (max-width: 768px) or (max-height: 550px)
-
+@media (max-width: 768px) {
     /* --- LAYOUT DA NUVEM --- */
     body {
         flex-direction: column;
